#+title:     Changelog
#+author:    Logan Barnett-Hoy
#+email:     logustus@gmail.com
#+date:      <2022-07-20 Wed>
#+language:  en
#+file_tags:
#+tags:

* changelog
** Upcoming
*** Breaking
*** Additions
*** Fixes
** v0.17.0
*** Breaking
1. Some require paths may change if you were depending on the odd way that this
   library was storing its files (directly under ~lib~, a silent no-no in Ruby
   gem land).
*** Additions
1. Add ~Promise#into_result~ for ~concurrrent-ruby~.
*** Fixes
1. Prevent ~$LOAD_PATH~ pollution by putting Ruby files under ~lib/monad-oxide~.
** v0.16.0
*** Breaking
*** Additions
*** Fixes
** v0.15.0
*** Breaking
*** Additions
1. Add ~Option~, a structure similar to Rust's ~Option~ with ~Some~ and
   ~None~ variants.  This provides a safer alternative to using ~nil~ for
   representing optional values.  Includes all core methods: ~some?~,
   ~none?~, ~map~, ~map_none~, ~inspect_some~, ~inspect_none~, ~and_then~,
   ~or_else~, ~unwrap~, and ~unwrap_none~.
2. Add ~Option#match~ for pattern matching over ~Some~ and ~None~ variants.
*** Fixes
** v0.14.0
*** Breaking
*** Additions
1. Add ~MonadOxide::Result.try~ as a convenience to enter a ~Result~ chain.

*** Fixes
** v0.13.0
*** Breaking
*** Additions
1. Add ~Either~, a structure similar to ~Result~ but uses unbiased ~Left~ and
   ~Right~ branches - meaning there is no assumption that one branch must be an
   error.  It is not in total feature parity, but much of it is usable.
*** Fixes
** v0.12.0
*** Breaking
*** Additions
*** Fixes
1. Retroactively add some release notes.  Not comprehensive.
2. Correct typo in code comments.
** v0.11.0
*** Breaking
*** Additions
*** Fixes
1. Fix the build (hopefully).
2. Add a branch build test, so we know if tests are passing before we merge.
** v0.10.0
*** Breaking
*** Additions
1. Add ~Result#unwrap_or_else~ and ~Result#unwrap_err_or_else~ for providing
   safe yet dynamic unwraps of ~Result~.
*** Fixes
** v0.9.0
*** Breaking
*** Additions